# src/main/resources/book-openapi.yaml
@@ -245,6 +245,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/ExceptionMessage'
   /borrowed-books:
+    get:
+      summary: Find borrowed books by user's id
+      tags:
+        - BorrowedBook
+      operationId: findBorrowedBooks
+      parameters:
+        - name: userId
+          in: query
+          required: true
+          description: The ID of the user.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Got borrowed books
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReadBorrowedBooks'
     post:
       summary: "Add a borrowed book"
       operationId: addBorrowedBook
@@ -329,27 +349,6 @@ paths:
             application/json:
               schema:
                 type: boolean
-  /users/{userId}/borrowed-books:
-    get:
-      summary: Find borrowed books by user's id
-      tags:
-        - User
-      operationId: findBorrowedBooks
-      parameters:
-        - name: userId
-          required: true
-          in: path
-          description: Identifier of the user
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Got borrowed books
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ReadBorrowedBooks'
 components:
   schemas:
     AuthorId:
